--- a/src/cart/cart.scss
+++ b/src/cart/cart.scss
@@ -1,6 +1,6 @@
 .body {
   .container {
-    margin: 0px;
+    margin: 0;
     display: flex;
     width: 100%;
     height: 100%;
@@ -11,7 +11,7 @@
       height: 280px;
       border: none;
       padding: 20px;
-      margin: 10px;
+      margin: 7px;
       background-color: white;
       position: relative;
 
@@ -50,7 +50,7 @@
           cursor: pointer;
           border-radius: 5px;
         }
-        :hover {
+        button:hover {
           background-color: #014fa8;
         }
       }
